# wordle-solvers

./: .gitattributes  .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  deny.toml
.github/workflows/: releases.yml
crates/wordle-automaton/: Cargo.toml
crates/wordle-automaton/src/: lib.rs  prepare.rs  types.rs
crates/wordle-solvers/: Cargo.toml  build.rs
crates/wordle-solvers/src/: main.rs  words.rs
