[package]
name = "wordle-automaton"
description = "Solve wordle puzzles"
authors = ["Paul Horn <developer@knutwalker.de>"]
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"

homepage = "https://gh.knutwalker.io/wordle-solvers/"
repository = "https://github.com/knutwalker/wordle-solvers/"
readme = "README.md"
categories = ["science"]
keywords = ["wordle", "puzzle", "solver"]

[dependencies]
fst = "0.4.7"
smallvec = {version = "1.7.0", features = [ "const_generics", "const_new", "union" ] }
