[package]
name = "wordle-solvers"
description = "Solve a Wordle puzzle based on a provided word list"
authors = ["Paul Horn <developer@knutwalker.de>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

homepage = "https://gh.knutwalker.io/worlde-solvers/"
repository = "https://github.com/knutwalker/worlde-solvers/"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["wordle", "puzzle", "solver"]


[dependencies]
clap = { version = "3.0.6", default-features = false, features = ["std", "color"] }
color-eyre = { version = "0.5.11", default-features = false }
dialoguer = { version = "0.9.0", default-features = false }
fst = "0.4.7"
worlde-automaton = { path = "../wordle-automaton", version = "0.1.0" }
