[package]
name = "wordle-solvers"
description = "Solve a Wordle puzzle based on a provided word list"
authors = ["Paul Horn <developer@knutwalker.de>"]
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"

homepage = "https://gh.knutwalker.io/wordle-solvers/"
repository = "https://github.com/knutwalker/wordle-solvers/"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["wordle", "puzzle", "solver"]


[dependencies]
clap = { version = "4.0.9", default-features = false, features = ["std"] }
eyre = { version = "0.6.7", default-features = false }
dialoguer = { version = "0.10.0", default-features = false }
fst = "0.4.7"
wordle-automaton = { path = "../wordle-automaton", version = "^0.9.0" }
